--- a/styles.css
+++ b/styles.css
@@ -648,12 +648,26 @@ p {
   height: 50px;
   border-radius: 50%;
   overflow: hidden;
+  background-color: rgba(10, 124, 46, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: var(--transition);
 }
 
-.author-avatar img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.testimonial-card:hover .author-avatar {
+  transform: scale(1.1);
+  background-color: rgba(10, 124, 46, 0.15);
+}
+
+.author-avatar svg {
+  width: 40px;
+  height: 40px;
+  transition: var(--transition);
+}
+
+.testimonial-card:hover .author-avatar svg {
+  transform: scale(1.1);
 }
 
 .author-name {
